Bug 37622. Hackery to get <embed hidden='true'> to work. Check hidden attribute; if set, size to (0, 0) and don't create a widget. r=pavlov,blizzard.